# py

./: .gitignore  generate_learning_project_summary_ppt.py  learning-gpt-plan.md  learning-plan-v2.md  learning-plan.md  learning.json  report.json  senior-frontend-interview-react-ai.md  utils.py  大模型应用开发学习项目总结.pptx
.claude/: settings.json  settings.local.json
week1-practice/: README.md  learning.json  practice_01_basics.py  practice_02_class.py  practice_03_file_io.py  practice_04_api.py  practice_05_project.py  reference_json.py  reference_list_dict.py  test.py
week1-python-ai-basics/: .env copy  01_basics.md  01_basics.py  02_advanced.md  02_advanced.py  03_env_and_api.md  03_env_and_api.py  03_env_and_apiCloud.py  04_ai_concepts.md  04_ai_concepts.py  05_chatbot.md  05_chatbot.py  06_advanced_project.md  06_advanced_project.py  07_new_syntax.py  pyproject.toml  week1_summary.pptx  week1_summary_v2.pptx
week1-python-ai-basics/chatbot/: __init__.py  __main__.py  client.py  commands.py  config.py
week2-practice/: practice_01_prompt.py  practice_02_structured.py  practice_03_eval.py  practice_04_langchain.py  practice_05_agent.py
week2-project/: agent.py  eval_cases.json  eval_runner.py  extractor.py  logger.py  main.py  tools.py
week2-prompt-and-langchain/: 01_prompt_engineering.md  01_prompt_engineering.py  02_structured_output.md  02_structured_output.py  03_eval_and_debug.md  03_eval_and_debug.py  04_langchain_basics.md  04_langchain_basics.py  05_langchain_agent.md  05_langchain_agent.py  eval_cases.json  week2_summary.pptx  week2_summary_v2.pptx
(+62 files in other folders)
